refactor: 데이터베이스 쿼리 구조 변경
- 일부 정규화가 진행될 수 있도록 쿼리 개선
