# docs/swagger.json
@@ -1894,7 +1894,7 @@
                 "customer_name",
                 "expires_at",
                 "max_devices",
-                "product_name"
+                "product_id"
             ],
             "properties": {
                 "customer_email": {
@@ -1918,10 +1918,7 @@
                     "type": "string"
                 },
                 "product_id": {
-                    "description": "제품 ID (선택사항)",
-                    "type": "string"
-                },
-                "product_name": {
+                    "description": "제품 ID",
                     "type": "string"
                 }
             }
